# aqua

./: CMakeLists.txt  CMakePresets.json  learning.md  network_manager.cpp  network_manager.h  readme.md  readme_zh.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
aqua-client/: CMakeLists.txt
aqua-client/src/: adaptive_buffer.cpp  adaptive_buffer.h  audio_format_common.hpp  audio_playback.cpp  audio_playback.h  cmdline_parser.cpp  cmdline_parser.h  main.cpp  network_client.cpp  network_client.h  rpc_client.cpp  rpc_client.h  signal_handler.cpp  signal_handler.h
aqua-client/src/linux/: audio_playback_linux.cpp  audio_playback_linux.h
aqua-client/src/windows/: audio_playback_windows.cpp  audio_playback_windows.h
aqua-qt/: CMakeLists.txt
aqua-qt/qt-client/: CMakeLists.txt  version.h.in
aqua-qt/qt-client/src/: main.cpp
aqua-qt/qt-client/src/ui/: AudioMeterWidget.h  ClientMainWindow.cpp  ClientMainWindow.h  ClientMainWindow.ui
aqua-qt/qt-server/: CMakeLists.txt
aqua-qt/qt-server/src/: ServerMainWindow.cpp  ServerMainWindow.h  main.cpp
aqua-qt/qt-server/src/ui/: AudioFormatSettings.cpp  AudioFormatSettings.h  AudioFormatSettings.ui  AudioMeterWidget.cpp  ServerMainWindow.cpp  ServerMainWindow.h  ServerMainWindow.ui
aqua-server/: .gitignore  CMakeLists.txt  learning.md  version.h.in
aqua-server/src/: audio_format_common.hpp  audio_manager.cpp  audio_manager.h  cmdline_parser.cpp  cmdline_parser.h  formatter.hpp  main.cpp  network_server.cpp  network_server.h  rpc_server.cpp  rpc_server.h  session.hpp  session_manager.cpp  session_manager.h  signal_handler.cpp  signal_handler.h
aqua-server/src/linux/: audio_manager_impl_linux.cpp  audio_manager_impl_linux.h
aqua-server/src/windows/: audio_manager_impl_windows.cpp  audio_manager_impl_windows.h
proto/: audio_service.proto
public/proto/: audio_service.proto
src/: adaptive_buffer.cpp  adaptive_buffer.h  audio_manager.cpp  audio_manager.h  audio_playback.cpp  audio_playback.h  cmdline_parser.cpp  cmdline_parser.h  config.h.in  formatter.hpp  main.cpp  network_client.cpp  network_client.h  network_manager.cpp  network_manager.h  network_server.cpp  network_server.h  playback.cpp  playback.h  rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h  session.hpp  session_manager.cpp  session_manager.h  signal_handler.cpp  uncomplete_functions.hpp
src/linux/: audio_manager_impl_linux.cpp  audio_manager_impl_linux.h  audio_playback_linux.cpp  audio_playback_linux.h
src/windows/: audio_manager_impl_windows.cpp  audio_manager_impl_windows.h  audio_playback_windows.cpp  audio_playback_windows.h
test/: test_client_main.cpp
test/rpc_client/: rpc_test_client.cpp  rpc_test_client.h  rpc_test_client_main.cpp
test/test_client/: test_client.cpp  test_client.h
test/udp_client/: udp_test_client.cpp  udp_test_client.h  udp_test_client_main.cpp
